@@ -4,6 +4,7 @@ commit messages and/or the pull requests.
 (unreleased)
 
 * Can stub dynamic properties (imhuntingwabbits)
+* Stubbed exceptions are no longer re-raised in verify
 * Fixed C++ compilation issues (Jonathan Crooke, Daniel Demiss)
 * Add module support for the OS X framework (Ian Anderson)
 
